force-app/main/default/objects/Mst_Models__c/Mst_Models__c.object-meta.xml
<CustomObject>
    <label>車種</label>
    <nameField>
        <label>車種名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>