force-app/main/default/objects/Mst_Models__c/fields/inum__c.field-meta.xml
<CustomField>
    <fullName>inum__c</fullName>
    <externalId>true</externalId>
    <label>INUM</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>