force-app/main/default/objects/Mst_Models__c/fields/maker__c.field-meta.xml
<CustomField>
    <fullName>maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>車種</relationshipLabel>
    <relationshipName>models</relationshipName>
    <type>Lookup</type>
</CustomField>