force-app/main/default/objects/Mst_Models__c/fields/maker_disp__c.field-meta.xml
<CustomField>
    <fullName>maker_disp__c</fullName>
    <description>山本</description>
    <label>メーカ名（表示用）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>