force-app/main/default/objects/Mst_Models__c/fields/Makers_en__c.field-meta.xml
<CustomField>
    <fullName>Makers_en__c</fullName>
    <description>臨時サイトへ他社オク出品車両を掲載する時に使用。</description>
    <label>メーカー名（英字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>