force-app/main/default/objects/Mst_Models__c/fields/model_name_eizi__c.field-meta.xml
<CustomField>
    <fullName>model_name_eizi__c</fullName>
    <label>車種名英字</label>
    <length>255</length>
    <type>Text</type>
</CustomField>