force-app/main/default/objects/Mst_Models__c/fields/model_name_half_width__c.field-meta.xml
<CustomField>
    <fullName>model_name_half_width__c</fullName>
    <description>喜多
ゼロシステム連携に必要な項目</description>
    <label>車種名（半角カナ）</label>
    <length>25</length>
    <type>Text</type>
</CustomField>