force-app/main/default/objects/Mst_Models__c/fields/ModelsID_18__c.field-meta.xml
<CustomField>
    <fullName>ModelsID_18__c</fullName>
    <description>山本</description>
    <formula>CASESAFEID(Id)</formula>
    <label>車種ID（18ケタ）</label>
    <type>Text</type>
</CustomField>