force-app/main/default/objects/Mst_Models__c/fields/reuse_disp__c.field-meta.xml
<CustomField>
    <fullName>reuse_disp__c</fullName>
    <label>リユース表示区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>表示する</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>表示しない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>