force-app/main/default/objects/Mst_Models__c/fields/row_num__c.field-meta.xml
<CustomField>
    <fullName>row_num__c</fullName>
    <label>並び替え用</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>