force-app/main/default/objects/Mst_Models__c/fields/variety_classification__c.field-meta.xml
<CustomField>
    <fullName>variety_classification__c</fullName>
    <label>品種分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>普通車</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>軽自動車</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>大型車(2t以上)</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>超小型車（車輌総重量3.5t未満）</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>小型車（車輌総重量3.5t以上、7.5t未満）</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>中型車（車輌総重量7.5t以上、18t未満）</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>大型車（車輌総重量18t以上）</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>トレーラヘッド</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>トレーラ</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>バス</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>バイク</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>重機・建機</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>農機</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>費用項目</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>自動車パーツ</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>その他商品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>