force-app/main/default/objects/Mst_Models__c/fields/ZeroSupport__c.field-meta.xml
<CustomField>
    <fullName>ZeroSupport__c</fullName>
    <label>ゼロ対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>FAX対応可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>